[package]
authors = ["Christopher Michael Sutton <christopher.sutton12@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "f3_usart"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
panic-itm = "0.4.0"

[dependencies.f3]
features = ["rt"]
version = "0.6.1"

[dependencies.heapless]
default-features = false
version = "0.3.7"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.3.5"

[[bin]]
name = "f3_usart"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
